--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.22.3",
+    "recharts": "^3.7.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
